--- a/app/src/scss/component/_weather-data.scss
+++ b/app/src/scss/component/_weather-data.scss
@@ -1,13 +1,20 @@
 .weather-data {
-  background-color: $black-squeeze;
-  padding: 1rem;
+  &__upper {
+    padding: 5rem 1rem 2.5rem;
+    background-color: $black-squeeze;
+  }
+
+  &__lower {
+    background-image: linear-gradient(to bottom, $black-squeeze 15%, $white);
+    padding: 0 1rem 2.5rem;
+  }
 }
 
 .weather-data__temperature {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .weather-data__temperature-item {
@@ -50,6 +57,50 @@
   @include font-size(14px);
   text-transform: uppercase;
   text-align: center;
-  font-weight: 700;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+  margin-bottom: 0;
+}
+
+.weather-data__location {
+  @include font-size(18px);
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 800;
+  letter-spacing: 0.35rem;
+  margin-bottom: 0.25rem;
+}
+
+.weather-data__time {
+  @include font-size(12px);
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 600;
   letter-spacing: 0.125rem;
+  color: lighten($black, 25);
+}
+
+.weather-data__figures {
+  margin: 1.5rem auto 0;
+  max-width: 500px;
+}
+
+.weather-data__figure {
+  @include font-size(14px);
+  background-color: $white;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  color: lighten($black, 25);
+  letter-spacing: 0.125rem;
+  padding: 1rem;
+  text-transform: uppercase;
+  text-align: center;
+
+  &:not(:first-child) {
+    margin-top: 0.5rem;
+  }
+}
+
+.weather-data__figure-icon {
+  margin: 0 0.5rem;
 }
